# 2UFP

./: README.md
AED1_2UFP/: CMakeLists.txt  main.c
AED1_2UFP/lp/: aed1_00.c  aed1_00.h  aed1_02.c  aed1_02.h  aed1_03.c  aed1_03.h  aed1_04.c  aed1_04.h  aed1_05.c  aed1_05.h  aed1_06.c  aed1_06.h  aed1_07.c  aed1_07.h  aed1_08.c  aed1_08.h
AED1_2UFP/lp/Exel/: f1_ex14.xlsx  f1ex3_1.xlsx
AED1_2UFP/teste_estudo/: teste_171116.txt  teste_211108.txt  teste_estudo.c  teste_estudo.h  teste_estudo2.c
AED1_2UFP/teste_estudo/freq2/teste2016/: teste_2016.txt
AED1_2UFP/teste_estudo/freq2/teste2018/: 4a_codigo.txt  5_MergeSort.txt  5_QuickSort.txt  teste_2018.txt  teste_2018_3a
AED1_2UFP/tp/: tabela_sub_strigns.txt
ANum/Formulas Excel/: Gauss-Seidel.xlsx  Raízes.xlsx
ANum/Teste_Estudo/: 1c_ficha2.xlsx
Arquitetura_2UFP/: CMakeLists.txt  main.c
Arquitetura_2UFP/frequencia1_estudo/: 1_b_c.txt  2_a.txt  f2ex3.asm  f2ex4.asm  (+7 more)
Iapg/: CMakeLists.txt  main.c
LP1_2UFP/: CMakeLists.txt  main.c
LP1_2UFP/data/: cardGame.txt  teste2_2019.txt  words_matrix.txt
LP1_2UFP/lp/: pr01.c  pr01.h  pr02.c  pr02.h  pr03.c  pr03.h  pr04.c  pr04.h  pr05.c  pr05.h  pr06.c  pr06.h  pr07.c  pr07.h  pr08.c  pr08.h  pr09.c  pr09.h  pr10.c  pr10.h  pr11.c  pr11.h
LP1_2UFP/testes/: teste2.c  teste2.h  teste_respostas.txt  testes.c  testes.h  testes2_2018_respostas.txt  testes2_2019_respostas.txt  testes2_respostas.txt
LP1_2UFP/tp/: tp01.c  tp01.h  tp02.c  tp02.h  tp03.c  tp03.h  tp04.c  tp04.h  tp05.c  tp05.h  tp06.c  tp06.h  tp08.c  tp08.h  tp09.c  tp09.h  tp10.c  tp10.h  tp11.c  tp11.h
(+190 files in other folders)
